# course_sql_isa_2

./: pyproject.toml
code/: db_to_add.sql  dump_northwind_traders.sql  module_to_db.py  script_create_suppliers.py
code/sql_requests/: customers_page.sql  employees_page.sql  orders_page.sql  products_page.sql
